# practice_8_OOP

./: .gitignore  pyproject.toml  readme.md
classes_diagram/: general_diagram.puml  gui.puml  main_diagram.puml  market_diagram.puml  schema.puml
src/: main.py
src/configs/: external_conj_config.yaml  market_config.yaml
src/core/: external_conjucture.py  fund.py  game.py  models.py  player.py  portfolio.py
src/gui/: assets_graph_widgets.py  graph_widget.py  portfolio_graph_widget.py  purchase_dialog.py  simulation_window.py  start_window.py  stock_graph_widget.py
src/investments/: bank_deposit.py  government_bond.py  investment.py  precious_metal.py  stock.py
src/trading_market/: available_assets.py  market.py  market_config.py
